Clean up dependencies